2001-10-02  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: finish up gconf support. All config options
	are now saved

	* interface.c: get the gtk_widget_shows right as well as other
	minor fixes

2001-10-01  Kevin Vandersloot <kfv101@psu.edu>

	Various minor fixes and add the beginnings of gconf support
	for the configuration

2001-09-30  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: get sorting right and store the process info
	for each row

	* interface.c: bring back sensitivity changing

	* infoview.c: bring back getting and displauing the info

	* callbacks.c: save and restore the highlighted disk. Handle
	row selections correctly now

2001-09-30  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: bring back the disks list among other things

	* callbacks.c: update the disk list.

2001-09-30  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: bring back some more functionality

	* callbacks.c, interface.c: ditto

2001-09-29  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: add back icon support

	* procman.c: for now only load the default icons

	* util.c (get_size_string): return floats to one decimal
	place

2001-09-29  Kevin Vandersloot <kfv101@psu.edu>

	* util.c (get_size_string): put this function here since I 
	have it in about three different places already

	* proctable.c: make the mem column a string and use 
	get_size_string for nice display

2001-09-29  Kevin Vandersloot <kfv101@psu.edu>

	Initial port to GNOME 2.0 platform. Too much changes to detail

	* proctable.c: port to GtkTreeview from e-tree

2001-09-25  Kevin Vandersloot <kfv101@psu.edu>

	* release 0.10.3

	* interface.c: comment out the "about process" item as it is
	stupid right now. Maybe in the future when we get a good
	help browser.

2001-09-25  Kevin Vandersloot <kfv101@psu.edu>

	* prettytable.c: change GDK_INTERP_NEAREST to HYPER for
	better scaling of the icons.

2001-09-25  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: make the minimum update interval for