@@ -1,3 +1,15 @@
+2001-10-03  Kevin Vandersloot <kfv101@psu.edu>
+
+	* procdialogs.c: bring back the dialogs
+
+	* procactions.c: update to use the procdata->selected_process
+	instead of selected_node
+
+	* interface.c: bring back some menuitems
+
+	* callbacks.c: bring back killing processes and renice and 
+	prefs dialog
+
 2001-10-02  Kevin Vandersloot <kfv101@psu.edu>
 
 	* procman.c: finish up gconf support. All config options
